<resources>
    <string name="app_name">OrlikApp</string>
    <string name="findOrlik">Znajdz Orlika</string>
    <string name="serverProblem">Problem z serwerem</string>
    <string name="error">Coś poszło nie tak</string>
    <string name="connectionError">Brak połączenia</string>
    <string name="authorizationProblem">Problem z autoryzacja</string>
    <!--LoginActivity -->
    <string name="hintUser">E-mail</string>
    <string name="rememberCheckbox">Zapamietaj mnie</string>
    <string name="logIn">ZALOGUJ</string>
    <string name="signUp">Zarejestruj</string>
    <string name="forgotPassword">Zapomniałeś Hasła?</string>

    <!--LoginActivity-UI-->
    <string name="invalidCredentialis">Błędna nazwa użytkownika lub haslo</string>

    <!--RegistrationActivity-->
    <string name="email">Adres Email</string>
    <string name="frist_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="password">Hasło</string>
    <string name="repeat_password">Powtórz Hasło</string>
    <string name="username">Nazwa użytkownika</string>

    <!--Errors-->
    <string name="emailError">Niepoprawny adres email</string>
    <string name="repeatPasswordError">Podane hasła nie są identyczne</string>
    <string name="usernameExistsError">E-mail o danej nazwie już istnieje</string>
    <string name="emptyBox">Pole nie moze byc puste</string>
    <string name="badRequest">Złe dane</string>
    <string name="badDataInput">Zły format daty</string>

    <!--Drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Menu MainActivityDrawer-->
    <string name="myprofile">Moj profil</string>
    <string name="settings">Ustawienia</string>
    <string name="search">Szukaj</string>
    <string name="teams">Grupy</string>
    <string name="logout">Wyloguj</string>
    <string name="reservation">Rezerwacje</string>
    <string name="mainPage">Strona Główna</string>

    <!--Menu-->
    <string name="searchEditText">Szukaj...</string>
    <string name="wrongAddresName">Nie znaleziono żadnych obiektow sportowych o podanym adresie</string>
    <string name="goTo">Przejdz</string>


    <!--Categroy-->
    <string name="football">Piłka nożna</string>
    <string name="volleyball">Siatkówka</string>
    <string name="basketball">Koszykówka</string>

    <!--WeekView-->
    <string name="view">Widok</string>

    <string name="action_today">Dzisiaj</string>
    <string name="action_day_view">1-Dzień</string>
    <string name="action_three_day_view">3-Dni</string>
    <string name="action_week_view">Tydzień</string>

    <!--BookingDetails-->
    <string name="participants">Uczestnicy</string>
    <string name="organiser">Organizator</string>
    <string name="reservationDate">Data</string>
    <string name="selectStartTime">WYBIERZ GODZINĘ ROZPOCZĘCIA</string>
    <string name="selectDurationOfBooking">CZAS TRWANIA</string>

    <!--MyReservation-->
    <string-array name="category_of_reservation_array">
        <item>Lider</item>
        <item>Uczestnik</item>
    </string-array>

    <!--SettingsFragment-->
    <string name="changeEmail">Zmień E-mail</string>
    <string name="changePassword">Zmień hasło</string>
    <string name="save">Zapisz</string>
    <string name="currentPassword">Aktualne hasło</string>
    <string name="newPassword">Nowe hasło</string>
    <string name="repeatPassword">Powtórz hasło</string>
    <string name="newEmail">Nowy E-mail</string>
    <string name="repeatEmail">Potwierdź E-mail</string>
    <string name="deleteAccount">Usuń konto</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>

    <string name="delete">Usuń</string>
    <string name="confirmDelete">Aby usunąć wpisz: DELETE</string>
    <string name="currentPasswordError">Hasło jest nieprawidłowe</string>
    <string name="newPasswordError">Hasło nie spełnia wymagań</string>
    <string name="confirmDeleteError">niepoprawne hasło</string>

    <!--AlertDiaglos-->
    <string name="createBookingDialog">Utworzyc rezerwacje?</string>
    <string name="deleteBookingDialog">Czy na pewno chcesz usunąć rezerwacje?</string>
</resources>
