<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainpage"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/mainPage" />
    <item
        android:id="@+id/myprofile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/myprofile" />
    <item
        android:id="@+id/reservation"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/reservation" />
    <item
        android:id="@+id/teams"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/teams" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_youtube_searched_for_black_24dp"
        android:title="@string/search" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout" />
</menu>