<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boisko_v2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <EditText
                android:id="@+id/emailAddres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:textColor="#fff"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/frist_name"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/registartionUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />


            <CheckBox
                android:id="@+id/saveUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/rememberCheckbox"
                android:textColor="#fff" />

            <Button
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_signup"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:padding="16dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>