<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_provide_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <!-- Logo -->
            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="48dp"
                android:padding="16dp"
                android:src="@drawable/ic_directions_bike_black_24dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/background_login_two"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/hintUser"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_login_two"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="Hasło"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />


            <RelativeLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:padding="15dp"
                    android:layout_alignParentStart="true"
                    android:id="@+id/saveUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rememberCheckbox"
                    android:textColor="#fff" />

                <TextView
                    android:padding="15dp"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/forgotPassword"
                    android:textColor="#fff" />
            </RelativeLayout>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login_3"
                android:text="@string/logIn"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nie masz konta?"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/signInTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="Zarejestruj się"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:theme="@style/ProgressTheme"
        android:visibility="invisible" />
</RelativeLayout>
